--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sp</groupId>
-	<artifactId>demoService</artifactId>
+	<artifactId>cddemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demoService</name>
 	<description>Demo project for Spring Boot</description>
