--- a/src/assembly/docker/dockerfile
+++ b/src/assembly/docker/dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:8-jre-alpine
 ENV JAVA_TOOL_OPTIONS=""
 ENV SERVER_PORT=8080
 
-COPY cddemo_pub.jar /cddemo_pub.jar
+ADD cddemo-0.0.1-SNAPSHOT.jar /cddemo-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8080
 
@@ -11,4 +11,4 @@ RUN adduser -S aUser
 
 USER aUser
 
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/cddemo_pub.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/cddemo-0.0.1-SNAPSHOT.jar"]
