--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,18 +62,26 @@ verify:jdk8:
 # To get this working you need to define a volume while configuring your gitlab-ci-multi-runner.
 # Mount your `settings.xml` as `/root/.m2/settings.xml` which holds your secrets.
 # See https://maven.apache.org/settings.html
-deploy:jdk8:
-  # Use stage test here, so the pages job may later pickup the created site.
-  stage: test
-  script:
-    - 'mvn $MAVEN_CLI_OPTS deploy site site:stage'
-  only:
-    - master
+
+#deploy:jdk8:
+#  # Use stage test here, so the pages job may later pickup the created site.
+#  stage: test
+#  script:
+#    - 'mvn $MAVEN_CLI_OPTS deploy site site:stage'
+# only:
+#    - master
   # Archive up the built documentation site.
-  artifacts:
-    paths:
-    - target/staging
-  image: maven:3.3.9-jdk-8
+#  artifacts:
+#    paths:
+#    - target/staging
+#  image: maven:3.3.9-jdk-8
+
+deploy:
+    image: maven:3.3.9-jdk-8
+    script:
+      - 'mvn deploy -s ci_settings.xml'
+    only:
+      - master
 
 pages:
   image: busybox:latest
