--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,24 +57,13 @@ verify:jdk8:
   <<: *verify
   image: maven:3.3.9-jdk-8
 
-deploy:
+deploy-maven-package:
     image: maven:3.3.9-jdk-8
+    stage: deploy
     script:
       - 'mvn deploy -s ci_settings.xml'
+    artifacts:
+      paths:
+        - public
     only:
       - master
-
-pages:
-  image: busybox:latest
-  stage: deploy
-  script:
-    # Because Maven appends the artifactId automatically to the staging path if you did define a parent pom,
-    # you might need to use `mv target/staging/YOUR_ARTIFACT_ID public` instead.
-    - mv target/staging public
-  dependencies:
-    - deploy
-  artifacts:
-    paths:
-    - public
-  only:
-    - master
