--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ build-docker-image:
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build --no-cache=true -t registry.gitlab.com/esnap/cddemo_pub .
-  #  - docker push registry.gitlab.com/esnap/cddemo_pub
+    - docker push registry.gitlab.com/esnap/cddemo_pub
   only:
     - master
 
