--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ cache:
 # we use `test-compile` here instead of `validate`, so the correct classpath is picked up.
 .validate:
   stage: verify-project
+  image: maven:3.3.9-jdk-8
   script:
     - 'mvn $MAVEN_CLI_OPTS test-compile'
   artifacts:
