--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,10 +43,10 @@ verify-project:
   image: maven:3.3.9-jdk-8
   stage: verify-project
   script:
-    - 'mvn $MAVEN_CLI_OPTS test-compile'
+    - 'mvn $MAVEN_CLI_OPTS package'
   artifacts:
     paths:
-    - 'cddemo_pub-0.0.1-SNAPSHOT.jar'
+    - 'target/cddemo_pub-0.0.1-SNAPSHOT.jar'
 
 build-docker-image:
   image: docker:latest
