--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,8 @@ build-docker-image:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build --no-cache=true -t registry.gitlab.com/esnap/cddemo_pub .
     - docker push registry.gitlab.com/esnap/cddemo_pub
+  dependencies:
+    - verify-project
   only:
     - master
 
