--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=docker
 spring.datasource.password=docker
+spring.jpa.hibernate.ddl-auto=validate
