--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name= cddemo
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=docker
