--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	 <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		 <version>2.0.2.RELEASE</version>
+		 <version>1.5.9.RELEASE</version>
 	</parent>
 	<groupId>com.sp</groupId>
 	<artifactId>cddemo</artifactId>
@@ -32,7 +32,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 	</properties>
 
 	<dependencyManagement>
