--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.sp</groupId>
 	<artifactId>cddemo</artifactId>
-	<version>1.0</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>demoService</name>
 	<description>Demo project for Spring Boot</description>
 
