--- a/src/assembly/docker/dockerfile
+++ b/src/assembly/docker/dockerfile
@@ -8,7 +8,7 @@ ADD cddemo-0.0.1-SNAPSHOT.jar /cddemo-0.0.1-SNAPSHOT.jar
 EXPOSE 8080
 
 RUN adduser -S aUser
-
+asdf
 USER aUser
 
 ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/cddemo-0.0.1-SNAPSHOT.jar"]
